apply plugin: 'com.android.application'

android {
    compileSdkVersion 31
    defaultConfig {
        applicationId "com.example.pawan.mvpsample"
        minSdkVersion 15
        targetSdkVersion 31
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }

        debug {
            testCoverageEnabled true
        }
    }

    testOptions {
        unitTests.all {
            // All the usual Gradle options.
            jvmArgs '-XX:MaxPermSize=256m'
        }
    }
compileOptions{
    sourceCompatibility JavaVersion.VERSION_1_8
    targetCompatibility JavaVersion.VERSION_1_8
}
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation appCompat
    implementation constraintLayout
    implementation ormlite
    implementation recyclerView
    implementation rxAndroid
    implementation rxJava
    implementation donutChart

    testImplementation junit
    androidTestImplementation junitAndroid
    androidTestImplementation espressoCore
    testImplementation mockito
}
